# voodoo-fist

./: .gitignore  README.md  docker-compose.yaml
application/front/: Dockerfile  nginx.conf  package-lock.json  package.json  vue.config.js
application/front/src/: App.vue  api-types.d.ts  main.ts
application/front/src/assets/css/: main.css
application/front/src/components/: DisablableButton.vue  FancyForm.vue  GreatButton.vue  MyFooter.vue  MyHeader.vue  NewItem.vue  NewList.vue  TodoItem.vue  TodoList.vue  UserLists.vue
application/front/src/router/: index.ts
application/front/src/services/: auth-header.ts  auth-service.ts  data-service.ts  propositions.ts
application/front/src/store/: auth-module.ts
application/front/src/views/: AboutPage.vue  AuthPage.vue  DashboardPage.vue  ListPage.vue  NotFound.vue
application/server/: .env.example  Cargo.toml  Dockerfile
application/server/src/: error.rs  main.rs
application/server/src/model/: db.rs  list.rs  mod.rs  todo_item.rs  user.rs
application/server/src/rest/: list.rs  mod.rs  todo.rs  todo_item.rs  user.rs
application/server/src/security/: hash.rs  mod.rs  token.rs
